# btcturk_websockets

./: .gitignore  Cargo.toml  Readme.md  Tasks.md
examples/: depth.rs  orderbook.rs  private_balance.rs  ticker.rs
src/: api_keys.rs  channel.rs  client.rs  lib.rs  main.rs  types.rs
tests/: example.rs  live_orderbook.rs  live_ticker.rs  main.rs  parse_orderbook.rs  parse_ticker.rs  working_main.rs
