[package]
name = "btcturk_websockets"
version = "1.0.0"
edition = "2021"
authors = ["Doğa Budak <dogabudak@gmail.com>"]
license = "MIT"
description = "A Rust client for the BtcTurk WebSocket API with real-time ticker and orderbook channels"
repository = "https://github.com/piarcha/btcturk_websockets"
documentation = "https://docs.rs/btcturk_websockets"
readme = "README.md"
keywords = ["btcturk", "websocket", "crypto", "ticker", "orderbook"]
categories = ["api-bindings", "cryptography", "asynchronous"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
url = "2"
